--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
       - run:
           command: npm run build
           name: Build app
+      - persist_to_workspace:
+          root: ~/nodesample
+          paths: .
 workflows:
   build_test_deploy: # this can be any name you choose
     jobs:
