--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Sample Node.js Project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    
+     "build": "webpack --config webpack.config.js"
   },
   "author": "Adem Cemil YALCIN",
   "license": "ISC"
