--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
      "build": "webpack --config webpack.config.js"
   },
+  "devDependencies": {
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
+    // ... rest
+  },
   "author": "Adem Cemil YALCIN",
   "license": "ISC"
 }
