--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
     "build:sit": "cross-env NODE_ENV=production env_config=sit node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "test": "npm run lint"//A newly added item
+    "test": "npm run lint"
   },
   "author": "Adem Cemil YALCIN",
   "license": "ISC"
