--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run: npm install
       - run:
-          command: npm run build
+          command: npm run build:prod
           name: Build app
       - persist_to_workspace:
           root: ~/nodesample
