--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run: npm install
       - run:
-          command: npm run build:prod
+          command: npm run build
           name: Build app
       
 workflows:
