--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@ version: 2.1
 orbs:
   node: circleci/node@5.0.2
 jobs:
-  build_and_test: # this can be any name you choose
-  docker:
+  build_and_test:
+    docker:
       - image: cimg/node:lts
     steps:
       - checkout
